<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_editor_delete"
        android:title="@string/delete"
        android:orderInCategory="9"
        android:icon="@drawable/ic_delete_dark"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_editor_restore"
        android:title="@string/restore"
        android:orderInCategory="10"
        android:icon="@drawable/ic_restore_dark"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_editor_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_save_dark"
        android:orderInCategory="11"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_editor_color"
        android:title="@string/menu_color"
        android:orderInCategory="20"
        android:icon="@drawable/ic_color_dark"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_editor_tags"
        android:title="@string/tags"
        android:orderInCategory="21"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_editor_share"
        android:title="@string/menu_share"
        android:orderInCategory="30"
        android:icon="@drawable/ic_share_dark"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_editor_remove"
        android:title="@string/move_to_trash"
        android:orderInCategory="40"
        android:icon="@drawable/ic_delete_dark"
        app:showAsAction="ifRoom"
        />

</menu>