<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Notes</string>
    <string name="nav_header_subtitle">Version</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="cancel">Cancel</string>
    <string name="no_content">No Content</string>
    <string name="database_read_error">Error retrieving data from database</string>
    <string name="title_activity_editor">Editor</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="delete">Delete</string>
    <string name="type_note_here">Type note here…</string>
    <string name="type_title_here">Type title here…</string>
    <string name="menu_color">Color</string>
    <string name="ok">OK</string>

    <string name="blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="white">White</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trash">Trash</string>
    <string name="deleted_notes">Deleted Notes</string>
    <string name="restore">Restore</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="search">Search</string>
    <string name="search_hint">Type here to search</string>
    <string name="results_for">"Results for: "</string>
    <string name="archive">Archive</string>
    <string name="tags">Tags</string>
    <string name="add_an_item">Add an item</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="enter_tag_name">Enter tag name...</string>
    <string name="new_tag">New tag</string>
    <string name="edit">Edit</string>
    <string name="tagged_note">Tagged Note</string>
</resources>