...
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_margin="@dimen/dialog_margin"-->
<!--    android:orientation="vertical">-->
    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_color_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_margin">
        <RadioButton
            android:id="@+id/radio_color_white"
...
            android:id="@+id/radio_color_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            />
        <RadioButton
            android:id="@+id/radio_color_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            />
        <RadioButton
            android:id="@+id/radio_color_green"
...
